--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
     font-family: 'Poppins', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
-html,body {
-    margin:0;
-    padding:0;
+
+html,
+body {
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
-    
+    max-width: 100%;
 }
+
 .header {
     background-color: rgba(255, 144, 14, 0.102);
 }
@@ -191,7 +194,9 @@ ul {
     justify-content: center;
     margin: 10px;
 }
-
+.btn-sp-2{
+    display: none;
+}
 .smol {
     font-weight: 500;
     font-size: 25px;
@@ -287,6 +292,17 @@ ul {
 }
 
 @media screen and (max-width: 576px) {
+
+    html,
+    body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
     .header {
         justify-content: center;
         align-items: center;
@@ -335,11 +351,15 @@ ul {
     .team {
         grid-area: team;
         padding: 20px 0px;
+        justify-content: center;
+        align-items: center;
     }
 
     .list {
         grid-area: list;
         padding: 0px;
+        justify-content: center;
+        align-items: center;
     }
 
     .list h3 {
@@ -396,32 +416,48 @@ ul {
     }
 
     .feature-img .btn-special {
-        position: absolute;
-        transform: translate(-120%, 320%);
-        -ms-transform: translate(500%, 75%);
+        display: none;
+    }
+
+    .feature-img .btn-sp-2 {
         background-color: #FF900E;
         color: white;
         font-size: 16px;
         padding: 20px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
         text-align: center;
         width: 342px;
         height: 200px;
         border: none;
         border-radius: 10px;
+        margin-left: 15px;
+        justify-content: center;
+        align-items: center;
+        display: inline;
+    }
+
+    .btn-sp-2 h1 {
+        font-weight: 700;
+        font-size: 65px;
+        justify-content: center;
+        margin: 10px;
+        justify-content: center;
+        align-items: center;
     }
 
     .facts {
+        margin-top: 30px;
         padding-top: 850px;
+        padding-right: 30px;
         padding-left: 5px;
+        justify-content: center;
+        align-items: center
     }
 
     .facts-container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         padding-left: 10px;
+        padding-right: 25px;
     }
 
     .sponsor {
