--- a/style.css
+++ b/style.css
@@ -267,6 +267,37 @@ ul {
     filter: grayscale(100%);
 }
 
+.additional{
+    background-color: #fcf8f9;
+    padding: 100px 100px;
+    margin: 0px 100px;
+}
+.additional-content{
+    display: flex;
+    justify-content: center;
+    padding: 100px 100px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.08);
+}
+.unique{
+    font-size: 65px;
+    padding-right: 30px;
+}
+.tick {
+    display: flex;
+}
+
+.tick-img {
+    width: 24px;
+    height: 24px;
+    margin-top: 20px;
+    margin-right: 15px;
+}
+
+.tick-text {
+    font-weight: 400;
+    font-size: 16px;
+}
+
 .copyright {
     justify-content: center;
     align-items: center;
@@ -393,6 +424,7 @@ ul {
         width: 520px;
         justify-content: center;
         align-items: center;
+        margin-left: 30px;
     }
 
     .section-title {
@@ -429,10 +461,11 @@ ul {
         height: 200px;
         border: none;
         border-radius: 10px;
-        margin-left: 15px;
+        margin-left: 130px;
         justify-content: center;
         align-items: center;
         display: inline;
+        margin-top: 20px;
     }
 
     .btn-sp-2 h1 {
@@ -445,8 +478,9 @@ ul {
     }
 
     .facts {
+        margin-left: 30px;
         margin-top: 30px;
-        padding-top: 850px;
+        padding-top: 920px;
         padding-right: 30px;
         padding-left: 5px;
         justify-content: center;
@@ -458,6 +492,42 @@ ul {
         grid-template-columns: repeat(2, 1fr);
         padding-left: 10px;
         padding-right: 25px;
+    }
+
+    .additional{
+        background-color: #fcf8f9;
+        padding: 10px 10px;
+        margin: 0px 10px;
+    }
+    .additional-content{
+        display: flex;
+        justify-content: center;
+        padding: 10px 10px;
+        box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.08);
+    }
+    .additional-content h3{
+ 
+    font-weight: 700;
+    font-size: 45px;
+    }
+    .unique{
+        font-size: 65px;
+        padding-right: 30px;
+    }
+    .tick {
+        display: flex;
+    }
+    
+    .tick-img {
+        width: 24px;
+        height: 24px;
+        margin-top: 20px;
+        margin-right: 15px;
+    }
+    
+    .tick-text {
+        font-weight: 400;
+        font-size: 16px;
     }
 
     .sponsor {
